log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: hremonen/logoutput:2.06_2
          volumeMounts:
            - name: logoutput-vol
              mountPath: /usr/src/app/logs
            - name: config-volume
              mountPath: /usr/src/app/config
        - name: logoutput-generator
          image: hremonen/logoutput-generator:2.01_1
          volumeMounts:
            - name: logoutput-vol
              mountPath: /usr/src/app/logs
      volumes:
        - name: logoutput-vol
          persistentVolumeClaim:
            claimName: logoutput-claim
        - name: config-volume
          configMap:
            name: logoutput-configmap
