log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
  namespace: dwk-exercises
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 80
          - path: /pingpong
            pathType: ImplementationSpecific
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
